# homework-project

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
src/: __init__.py  exceptions.py  split_records_into_batches.py
tests/: test_split_to_batches.py
