[tool.poetry]
name = "split_records_into_batches"
version = "0.1.0"
description = "An example homework project"
authors = ["Juho Enala <juho.enala@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
pre-commit = "^3.4.0"
black = "^23.9.1"
isort = "^5.12.0"
pylint = "^3.0.1"
mypy = "^1.5.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
